# ros-oak-d-lite-publisher

./: CMakeLists.txt  package.xml
launch/: run.launch
src/nodes/: frame_publisher.cpp
