<package format="2">
  <name>rgbd-pub</name>
  <version>0.0.1</version>
  <description>
    ROS node for publish rgb and depth images from OAK-D-LITE camera. 
  </description>
  <author>Bartosz Ptak</author>
  <maintainer email="bartptak@gmail.com">Bartosz Ptak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
    

</package>